--- a/manager/package.json
+++ b/manager/package.json
@@ -11,7 +11,8 @@
     "react": "15.3.2",
     "react-native": "0.35.0",
     "react-redux": "^4.4.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-saga": "^0.12.0"
   },
   "jest": {
     "preset": "jest-react-native"
