--- a/manager/package.json
+++ b/manager/package.json
@@ -19,6 +19,7 @@
     "preset": "jest-react-native"
   },
   "devDependencies": {
+    "babel-eslint": "^7.0.0",
     "babel-jest": "16.0.0",
     "babel-preset-react-native": "1.9.0",
     "jest": "16.0.1",
