--- a/manager/.eslintrc.json
+++ b/manager/.eslintrc.json
@@ -1,16 +1,29 @@
 {
-  "plugins": [
-    "react",
-    "react-native"
-  ],
+  // Use the AirBnB JS styleguide - https://github.com/airbnb/javascript
+  "extends": "airbnb",
+  // We use 'babel-eslint' mainly for React Native Classes
   "parser": "babel-eslint",
   "ecmaFeatures": {
-    "jsx": true
+    "classes": true
   },
+  // We can add/overwrite custom rules here
   "rules": {
-    "react-native/no-unused-styles": 2,
-    "react-native/split-platform-components": 2,
-    "react-native/no-inline-styles": 2,
-    "react-native/no-color-literals": 2
+    // React Native has JSX in JS files
+    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
+    // React Native includes images via require('../images/example.png')
+    "global-require": "off",
+    "linebreak-style": "off"
+  },
+  // Resolver for Platform-specific extensions
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".android.js", ".ios.js"]
+      }
+    }
+  },
+  "env": {
+    "browser": true,
+    "node": true
   }
 }
