--- a/manager/package.json
+++ b/manager/package.json
@@ -7,9 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "firebase": "^3.5.0",
+    "firebase": "^3.6.1",
+    "firebase-saga": "^1.1.1",
+    "immutability-helper": "^2.0.0",
     "react": "15.3.2",
-    "react-native": "0.35.0",
+    "react-native": "0.37.0",
     "react-native-router-flux": "^3.36.0",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
@@ -20,10 +22,14 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.0.0",
-    "babel-jest": "16.0.0",
+    "babel-jest": "17.0.0",
     "babel-preset-react-native": "1.9.0",
-    "jest": "16.0.1",
-    "jest-react-native": "16.0.0",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.6.0",
+    "jest": "17.0.0",
+    "jest-react-native": "17.0.0",
     "react-test-renderer": "15.3.2"
   }
 }
